--- a/packages/cloud-services/package.json
+++ b/packages/cloud-services/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@myiworlds/cloud-services",
   "version": "1.0.0",
-  "main": "dist/index.js",
+  "main": "src/index.ts",
   "typings": "dist/index.d.ts",
   "license": "MIT",
   "devDependencies": {
@@ -17,6 +17,7 @@
     "@google-cloud/storage": "^3.0.3",
     "@myiworlds/credentials": "^1.0.0",
     "@myiworlds/types": "1.0.0",
+    "firebase": "^6.3.4",
     "firebase-admin": "^8.2.0"
   }
 }
