--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -10,18 +10,27 @@
     "watch": "next"
   },
   "dependencies": {
+    "@apollo/react-hooks": "^3.0.1",
+    "@graphql-codegen/typescript-operations": "^1.4.0",
+    "@material-ui/core": "^4.3.2",
+    "@material-ui/icons": "^4.2.1",
     "@myiworlds/cloud-services": "^1.0.0",
     "@myiworlds/credentials": "^1.0.0",
     "@myiworlds/types": "^1.0.0",
-    "@graphql-codegen/typescript-operations": "^1.4.0",
     "apollo-boost": "^0.4.3",
+    "apollo-client": "^2.6.3",
     "apollo-link-context": "^1.0.18",
     "apollo-link-http": "^1.5.15",
     "cookie": "^0.4.0",
+    "firebase": "^6.3.5",
+    "firebase-admin": "^8.3.0",
+    "install": "^0.13.0",
     "isomorphic-unfetch": "^3.0.0",
     "next": "^9.0.3",
+    "next-cookies": "^1.1.2",
+    "npm": "^6.10.3",
     "react": "^16.7.0",
-    "react-apollo": "^2.5.8",
+    "react-apollo": "^3.0.0",
     "react-dom": "^16.7.0"
   },
   "devDependencies": {
@@ -31,6 +40,17 @@
     "@types/cookie": "^0.3.3",
     "@types/react": "^16.4.16",
     "@types/react-dom": "^16.0.11",
+    "@typescript-eslint/eslint-plugin": "^1.13.0",
+    "@typescript-eslint/parser": "^1.13.0",
+    "babel-eslint": "^10.0.3",
+    "eslint": "^6.2.2",
+    "eslint-config-react-app": "^5.0.1",
+    "eslint-plugin-flowtype": "^3.13.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-react-hooks": "^1.7.0",
+    "prettier-eslint": "^9.0.0",
     "typescript": "^3.5.3"
   },
   "license": "ISC"
