--- a/packages/graphql-api/package.json
+++ b/packages/graphql-api/package.json
@@ -30,6 +30,7 @@
     "@myiworlds/types": "^1.0.0",
     "apollo-server": "^2.7.0",
     "apollo-server-express": "^2.8.1",
+    "cookie": "^0.4.0",
     "dataloader": "^1.4.0",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
