--- a/packages/graphql-api/tsconfig.json
+++ b/packages/graphql-api/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "typeRoots": ["./src/types/*.d.ts"],
+    "typeRoots": ["./src/types/*.d.ts", "./node_modules/@types"],
     "esModuleInterop": true
   },
   "exclude": ["node_modules"],
