--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -11,7 +11,6 @@
   },
   "dependencies": {
     "@apollo/react-hooks": "^3.0.1",
-    "@graphql-codegen/typescript-operations": "^1.4.0",
     "@material-ui/core": "^4.3.2",
     "@material-ui/icons": "^4.2.1",
     "@myiworlds/cloud-services": "^1.0.0",
@@ -34,9 +33,10 @@
     "react-dom": "^16.7.0"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "^1.4.0",
-    "@graphql-codegen/typescript": "^1.4.0",
-    "@graphql-codegen/typescript-react-apollo": "^1.4.0",
+    "@graphql-codegen/cli": "^1.7.0",
+    "@graphql-codegen/typescript": "^1.7.0",
+    "@graphql-codegen/typescript-operations": "^1.7.0",
+    "@graphql-codegen/typescript-react-apollo": "^1.7.0",
     "@types/cookie": "^0.3.3",
     "@types/react": "^16.4.16",
     "@types/react-dom": "^16.0.11",
@@ -50,6 +50,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.14.3",
     "eslint-plugin-react-hooks": "^1.7.0",
+    "prettier": "^1.18.2",
     "prettier-eslint": "^9.0.0",
     "typescript": "^3.5.3"
   },
