--- a/packages/graphql-api/package.json
+++ b/packages/graphql-api/package.json
@@ -2,9 +2,11 @@
   "name": "graphql-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "watch": "concurrently --kill-others \"npm run --watch gen-schema-types\" \"npm run server\"",
+    "build": "rm -rf ./dist && tsc && copyfiles -u 1 src/**/*.graphql dist/server/src",
+    "start": "node dist/index.js",
     "server": "ts-node-dev --inspect --respawn --transpileOnly ./src/index.ts",
     "server2": "nodemon --inspect=5858 -r ts-node/register ./src/index.ts",
     "gen-schema-types": "nodemon -e graphql --exec ts-node src/scripts/createTypes.ts",
@@ -14,13 +16,17 @@
   "license": "MIT",
   "devDependencies": {
     "@gql2ts/from-schema": "^1.10.1",
+    "@gql2ts/types": "^1.9.0",
     "@types/express": "^4.17.0",
     "@types/graphql-fields": "^1.3.0",
     "@types/graphql-type-json": "^0.3.0",
+    "@typescript-eslint/eslint-plugin": "^2.0.0",
+    "@typescript-eslint/parser": "^2.0.0",
     "concurrently": "^4.1.1",
+    "copyfiles": "^2.0.0",
+    "eslint": "^6.3.0",
     "nodemon": "^1.19.1",
     "ts-node-dev": "^1.0.0-pre.40",
-    "tslint": "^5.18.0",
     "typescript": "^3.5.3"
   },
   "dependencies": {
