--- a/packages/graphql-api/tsconfig.json
+++ b/packages/graphql-api/tsconfig.json
@@ -1,8 +1,14 @@
 {
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "typeRoots": ["./src/types/*.d.ts", "./node_modules/@types"],
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "typeRoots": ["src/types/*.d.ts", "./node_modules/@types/*.d.ts"],
+    "moduleResolution": "node",
+    "baseUrl": "./",
+    "paths": {
+      "*": ["src/types/*"]
+    },
+    "outDir": "./dist"
   },
-  "exclude": ["node_modules"],
   "include": ["./src/**/*.ts"]
 }
