--- a/packages/helper-functions/package.json
+++ b/packages/helper-functions/package.json
@@ -4,10 +4,6 @@
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "license": "MIT",
-  "devDependencies": {
-    "@types/node": "^10.14.13",
-    "typescript": "^3.5.3"
-  },
   "scripts": {
     "build": "tsc",
     "watch": "tsc --watch"
@@ -16,5 +12,12 @@
     "@myiworlds/cloud-services": "^1.0.0",
     "@myiworlds/credentials": "^1.0.0",
     "@myiworlds/types": "^1.0.0"
+  },
+  "devDependencies": {
+    "@types/node": "^10.14.13",
+    "@typescript-eslint/eslint-plugin": "^2.0.0",
+    "@typescript-eslint/parser": "^2.0.0",
+    "eslint": "^6.3.0",
+    "typescript": "^3.5.3"
   }
 }
