--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,5 +14,6 @@
     "noUnusedParameters": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true
-  }
+  },
+  "exclude": ["node_modules"]
 }
