--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -10,9 +10,9 @@
     "watch": "next"
   },
   "dependencies": {
-    "@apollo/react-hooks": "^3.0.1",
-    "@material-ui/core": "^4.3.2",
-    "@material-ui/icons": "^4.2.1",
+    "@apollo/react-hooks": "^3.1.2",
+    "@material-ui/core": "^4.5.1",
+    "@material-ui/icons": "^4.5.1",
     "@myiworlds/cloud-services": "^1.0.0",
     "@myiworlds/credentials": "^1.0.0",
     "@myiworlds/types": "^1.0.0",
@@ -23,6 +23,7 @@
     "cookie": "^0.4.0",
     "firebase": "^6.3.5",
     "firebase-admin": "^8.3.0",
+    "formik": "^1.5.8",
     "install": "^0.13.0",
     "isomorphic-unfetch": "^3.0.0",
     "next": "^9.0.3",
@@ -30,16 +31,18 @@
     "npm": "^6.10.3",
     "react": "^16.7.0",
     "react-apollo": "^3.0.0",
-    "react-dom": "^16.7.0"
+    "react-dom": "^16.7.0",
+    "yup": "^0.27.0"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "^1.7.0",
-    "@graphql-codegen/typescript": "^1.7.0",
-    "@graphql-codegen/typescript-operations": "^1.7.0",
-    "@graphql-codegen/typescript-react-apollo": "^1.7.0",
+    "@graphql-codegen/cli": "^1.8.0",
+    "@graphql-codegen/typescript": "^1.8.0",
+    "@graphql-codegen/typescript-operations": "^1.8.0",
+    "@graphql-codegen/typescript-react-apollo": "^1.8.0",
     "@types/cookie": "^0.3.3",
     "@types/react": "^16.4.16",
     "@types/react-dom": "^16.0.11",
+    "@types/yup": "^0.26.24",
     "@typescript-eslint/eslint-plugin": "^1.13.0",
     "@typescript-eslint/parser": "^1.13.0",
     "babel-eslint": "^10.0.3",
