--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@zeit/next-stylus": "1.0.1",
     "document-register-element": "1.13.1",
     "express": "4.17.1",
+    "firebase": "^7.3.0",
     "next": "9.0.5",
     "react": "16.10.2",
     "react-dom": "16.10.2"
