Lots of changes.Auth up and running smoothly

--- a/libs/credentials/.gitignore
+++ b/libs/credentials/.gitignore
@@ -1,2 +1,6 @@
 # Credentials for Apps
-/src/firebase/firebaseConfig.ts
+!/src/firebase/index.ts
+/src/firebase/*
+
+!/src/google-cloud/index.ts
+/src/google-cloud/*
