--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "watch": "concurrently --kill-others \"npm run frontend\" \"npm run graphql-api\"",
     "frontend": "nx serve frontend --port 3000",
     "graphql-api": "nx serve graphql-api",
+    "generate": "graphql-codegen",
     "nx": "nx",
     "start": "nx serve",
     "build": "nx build",
@@ -29,35 +30,56 @@
   },
   "private": true,
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.3",
+    "@apollo/react-ssr": "^3.1.3",
+    "@google-cloud/debug-agent": "^4.1.0",
+    "@google-cloud/error-reporting": "^1.1.2",
     "@material-ui/core": "^4.6.0",
     "@material-ui/icons": "^4.5.1",
     "@zeit/next-css": "1.0.1",
     "@zeit/next-less": "1.0.1",
     "@zeit/next-sass": "1.0.1",
     "@zeit/next-stylus": "1.0.1",
+    "apollo-boost": "^0.4.4",
+    "apollo-link-context": "^1.0.19",
+    "apollo-link-http": "^1.5.16",
+    "apollo-server": "^2.9.9",
+    "apollo-server-express": "^2.9.9",
+    "cookie": "^0.4.0",
     "document-register-element": "1.13.1",
     "express": "4.17.1",
     "firebase": "^7.3.0",
+    "firebase-admin": "^8.7.0",
+    "graphql": "^14.5.8",
+    "isomorphic-unfetch": "^3.0.0",
     "next": "9.0.5",
     "react": "16.10.2",
     "react-dom": "16.10.2"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^1.8.3",
+    "@graphql-codegen/typescript": "^1.8.3",
+    "@graphql-codegen/typescript-operations": "^1.8.3",
+    "@graphql-codegen/typescript-react-apollo": "^1.8.3",
     "@nrwl/cypress": "8.7.0",
     "@nrwl/eslint-plugin-nx": "8.7.0",
     "@nrwl/express": "^8.7.0",
     "@nrwl/jest": "8.7.0",
     "@nrwl/next": "8.7.0",
+    "@nrwl/node": "8.7.0",
     "@nrwl/react": "8.7.0",
     "@nrwl/web": "8.7.0",
     "@nrwl/workspace": "8.7.0",
     "@testing-library/react": "9.3.0",
+    "@types/cookie": "^0.3.3",
+    "@types/express": "4.17.0",
     "@types/jest": "24.0.9",
     "@types/node": "~8.9.4",
     "@types/react": "16.9.6",
     "@types/react-dom": "16.9.2",
     "@typescript-eslint/eslint-plugin": "2.3.2",
     "@typescript-eslint/parser": "2.3.2",
+    "concurrently": "^5.0.0",
     "cypress": "3.4.1",
     "dotenv": "6.2.0",
     "eslint": "6.1.0",
@@ -66,14 +88,15 @@
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-react": "7.16.0",
     "eslint-plugin-react-hooks": "2.1.2",
+    "graphql-bigint": "^1.0.0",
+    "graphql-tools": "^4.0.6",
+    "graphql-type-json": "^0.3.0",
     "jest": "24.1.0",
+    "merge-graphql-schemas": "^1.7.3",
     "prettier": "1.18.2",
     "ts-jest": "24.0.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.4.5",
-    "@nrwl/node": "8.7.0",
-    "@types/express": "4.17.0",
-    "concurrently": "^5.0.0"
+    "typescript": "^3.7.2"
   }
 }
