--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "apollo-server": "^2.9.9",
     "apollo-server-express": "^2.9.9",
     "cookie": "^0.4.0",
+    "date-fns": "^2.8.1",
     "document-register-element": "1.13.1",
     "express": "4.17.1",
     "firebase": "^7.3.0",
