--- a/package.json
+++ b/package.json
@@ -2,11 +2,19 @@
   "name": "myiworlds",
   "version": "0.0.0",
   "license": "MIT",
+  "main": "dist/apps/functions/main.js",
+  "engines": {
+    "node": "10"
+  },
   "scripts": {
     "watch": "concurrently --kill-others \"npm run frontend\" \"npm run graphql-api\"",
     "frontend": "nx serve frontend --port 3000",
     "graphql-api": "nx serve graphql-api",
     "generate": "graphql-codegen",
+    "graphql-api:deploy": "nx build graphql-api --prod && docker build ./",
+    "graphql-api:start": "NODE_ENV=production && node main.js",
+    "firebase:serve": "nx build functions && nx build frontend && cd dist/apps/functions && firebase serve --only functions,hosting -p 3000",
+    "firebase:deploy": "firebase deploy",
     "nx": "nx",
     "start": "nx serve",
     "build": "nx build",
@@ -48,11 +56,16 @@
     "cookie": "^0.4.0",
     "date-fns": "^2.8.1",
     "document-register-element": "1.13.1",
+    "dotenv": "^6.2.0",
     "express": "4.17.1",
     "firebase": "^7.3.0",
     "firebase-admin": "^8.7.0",
+    "firebase-functions": "^3.3.0",
     "graphql": "^14.5.8",
+    "graphql-bigint": "^1.0.0",
+    "graphql-type-json": "^0.3.0",
     "isomorphic-unfetch": "^3.0.0",
+    "merge-graphql-schemas": "^1.7.3",
     "next": "9.0.5",
     "react": "16.10.2",
     "react-dom": "16.10.2"
@@ -81,19 +94,16 @@
     "@typescript-eslint/eslint-plugin": "2.3.2",
     "@typescript-eslint/parser": "2.3.2",
     "concurrently": "^5.0.0",
+    "cross-env": "^6.0.3",
     "cypress": "3.4.1",
-    "dotenv": "6.2.0",
     "eslint": "6.1.0",
     "eslint-config-prettier": "6.0.0",
     "eslint-plugin-import": "2.18.2",
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-react": "7.16.0",
     "eslint-plugin-react-hooks": "2.1.2",
-    "graphql-bigint": "^1.0.0",
     "graphql-tools": "^4.0.6",
-    "graphql-type-json": "^0.3.0",
     "jest": "24.1.0",
-    "merge-graphql-schemas": "^1.7.3",
     "prettier": "1.18.2",
     "ts-jest": "24.0.0",
     "ts-node": "~7.0.0",
