Update Readme and script names

--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
   "scripts": {
     "watch": "concurrently --kill-others \"npm run frontend\" \"npm run graphql-api\"",
     "frontend": "nx serve frontend --port 3000",
+    "frontend:serve": "nx build functions && nx build frontend && cd dist/apps/functions && firebase serve --only functions,hosting -p 3000",
+    "frontend:deploy": "nx build functions && nx build frontend && firebase deploy",
     "graphql-api": "nx serve graphql-api",
-    "generate": "graphql-codegen",
+    "graphql-api:serve": "NODE_ENV=production && node main.js",
     "graphql-api:deploy": "nx build graphql-api --prod && docker build ./",
-    "graphql-api:start": "NODE_ENV=production && node main.js",
-    "firebase:serve": "nx build functions && nx build frontend && cd dist/apps/functions && firebase serve --only functions,hosting -p 3000",
-    "firebase:deploy": "firebase deploy",
+    "graphql-api:generate": "graphql-codegen",
     "nx": "nx",
     "start": "nx serve",
     "build": "nx build",
