--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "myiworlds",
   "version": "0.0.0",
   "license": "MIT",
+  "private": true,
   "main": "dist/apps/functions/main.js",
   "engines": {
     "node": "10"
@@ -10,10 +11,9 @@
     "watch": "concurrently --kill-others \"npm run frontend\" \"npm run graphql-api\"",
     "frontend": "nx serve frontend --port 3000",
     "frontend:serve": "nx build functions && nx build frontend && cd dist/apps/functions && firebase serve --only functions,hosting -p 3000",
-    "frontend:deploy": "nx build functions && nx build frontend && firebase deploy",
     "graphql-api": "nx serve graphql-api",
-    "graphql-api:serve": "NODE_ENV=production && node main.js",
-    "graphql-api:deploy": "nx build graphql-api --prod && docker build ./",
+    "graphql-api:build": "nx build graphql-api --prod",
+    "graphql-api:start": "node main.js",
     "graphql-api:generate": "graphql-codegen",
     "nx": "nx",
     "start": "nx serve",
@@ -36,7 +36,6 @@
     "dep-graph": "nx dep-graph",
     "help": "nx help"
   },
-  "private": true,
   "dependencies": {
     "@apollo/react-hooks": "^3.1.3",
     "@apollo/react-ssr": "^3.1.3",
@@ -75,12 +74,14 @@
     "@graphql-codegen/typescript": "^1.8.3",
     "@graphql-codegen/typescript-operations": "^1.8.3",
     "@graphql-codegen/typescript-react-apollo": "^1.8.3",
+    "@nrwl/cli": "^8.9.0",
     "@nrwl/cypress": "8.7.0",
     "@nrwl/eslint-plugin-nx": "8.7.0",
     "@nrwl/express": "^8.7.0",
     "@nrwl/jest": "8.7.0",
     "@nrwl/next": "8.7.0",
     "@nrwl/node": "8.7.0",
+    "@nrwl/nx": "^7.8.7",
     "@nrwl/react": "8.7.0",
     "@nrwl/web": "8.7.0",
     "@nrwl/workspace": "8.7.0",
