Fixing linting, add GH trigger cloud build

--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "watch": "concurrently --kill-others \"npm run frontend\" \"npm run graphql-api\"",
     "frontend": "nx serve frontend --port 3000",
     "frontend:serve": "nx build functions && nx build frontend && cd dist/apps/functions && firebase serve --only functions,hosting -p 3000",
+    "frontend:deploy": "nx deploy frontend",
     "graphql-api": "nx serve graphql-api",
-    "graphql-api:build": "nx build graphql-api --prod",
+    "graphql-api:build:prod": "nx build graphql-api --prod",
     "graphql-api:start": "node main.js",
     "graphql-api:generate": "graphql-codegen",
     "nx": "nx",
