--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "graphql-api:generate": "graphql-codegen",
     "nx": "nx",
     "start": "nx serve",
-    "build": "nx build",
-    "test": "nx test",
+    "build": "nx build frontend && nx build functions && nx build graphql-api",
+    "test": "nx build frontend && nx build functions && nx build graphql-api",
     "lint": "nx workspace-lint && nx lint",
     "e2e": "nx e2e",
     "affected:apps": "nx affected:apps",
