--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -6,44 +6,69 @@ steps:
   - name: 'persistent_volume'
     path: '/persistent_volume'
 
-# Build the app in dev mode
+# Lint the affected apps in dev mode
 - name: 'gcr.io/cloud-builders/npm'
-  args: ['run', 'graphql-api:build']
+  args: ['run', 'affected:lint']
   volumes:
   - name: 'persistent_volume'
     path: '/persistent_volume'
 
-# Build the container image
-- name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '-t', 'gcr.io/$PROJECT_ID/graphql-api:$BUILD_ID', '.']
+# Build the affected apps in dev mode
+- name: 'gcr.io/cloud-builders/npm'
+  args: ['run', 'affected:build']
   volumes:
-    - name: 'persistent_volume'
-      path: '/persistent_volume'
+  - name: 'persistent_volume'
+    path: '/persistent_volume'
 
-# Push the container image to Container Registry
-- name: 'gcr.io/cloud-builders/docker'
-  args: ['push', 'gcr.io/$PROJECT_ID/graphql-api:$BUILD_ID']
+# Test the affected apps in dev mode
+- name: 'gcr.io/cloud-builders/npm'
+  args: ['run', 'affected:test']
+  volumes:
+  - name: 'persistent_volume'
+    path: '/persistent_volume'
 
-# Deploy container image to Cloud Run
-- name: 'gcr.io/cloud-builders/gcloud'
-  args: [
-    'run',
-    'deploy',
-    'graphql-api',
-    '--image',
-    'gcr.io/$PROJECT_ID/graphql-api:$BUILD_ID',
-    '--region',
-    'us-central1',
-    '--platform',
-    'managed',
-    '--allow-unauthenticated'
-    ]
-  env:
-    - 'PORT=8000'
-images:
-  - gcr.io/$PROJECT_ID/graphql-api:$BUILD_ID
+# ## Deploying frontend to testing environment
+# # Test the affected apps in dev mode
+# - name: 'gcr.io/cloud-builders/npm'
+#   args: ['run', 'frontend:deploy']
+#   volumes:
+#   - name: 'persistent_volume'
+#     path: '/persistent_volume'
 
-# gcloud builds submit
+
+# ## Deploying of graphql-api to testing environment
+# # Build the container image
+# - name: 'gcr.io/cloud-builders/docker'
+#   args: ['build', '-t', 'gcr.io/$PROJECT_ID/graphql-api:$BUILD_ID', '.']
+#   volumes:
+#     - name: 'persistent_volume'
+#       path: '/persistent_volume'
+
+# # Push the container image to Container Registry
+# - name: 'gcr.io/cloud-builders/docker'
+#   args: ['push', 'gcr.io/$PROJECT_ID/graphql-api:$BUILD_ID']
+
+# # Deploy container image to Cloud Run
+# - name: 'gcr.io/cloud-builders/gcloud'
+#   args: [
+#     'run',
+#     'deploy',
+#     'graphql-api',
+#     '--image',
+#     'gcr.io/$PROJECT_ID/graphql-api:$BUILD_ID',
+#     '--region',
+#     'us-central1',
+#     '--platform',
+#     'managed',
+#     '--allow-unauthenticated'
+#     ]
+#   env:
+#     - 'PORT=8000'
+# images:
+#   - gcr.io/$PROJECT_ID/graphql-api:$BUILD_ID
+
+
+
 
 # # Print file system to the console using bash
 # - name: 'gcr.io/cloud-builders/gcloud'
