--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@apollo/react-ssr": "^3.1.3",
     "@google-cloud/debug-agent": "^4.1.0",
     "@google-cloud/error-reporting": "^1.1.2",
+    "@google-cloud/secret-manager": "^1.1.2",
     "@material-ui/core": "^4.6.0",
     "@material-ui/icons": "^4.5.1",
     "@zeit/next-css": "1.0.1",
@@ -110,6 +111,8 @@
     "ts-jest": "24.0.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "^3.7.2"
+    "typescript": "^3.7.2",
+    "@types/react-router-dom": "5.1.0",
+    "@babel/preset-react": "7.0.0"
   }
 }
