Upgraded NX to 8.12.2, fix error on App setup

--- a/nx.json
+++ b/nx.json
@@ -12,7 +12,8 @@
       "tags": []
     },
     "frontend-e2e": {
-      "tags": []
+      "tags": [],
+      "implicitDependencies": ["frontend"]
     },
     "graphql-api": {
       "tags": []
