--- a/package.json
+++ b/package.json
@@ -67,9 +67,9 @@
     "graphql-type-json": "^0.3.0",
     "isomorphic-unfetch": "^3.0.0",
     "merge-graphql-schemas": "^1.7.3",
-    "next": "9.0.5",
-    "react": "16.10.2",
-    "react-dom": "16.10.2"
+    "next": "9.1.5",
+    "react": "16.12.0",
+    "react-dom": "16.12.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^1.8.3",
@@ -77,34 +77,34 @@
     "@graphql-codegen/typescript-operations": "^1.8.3",
     "@graphql-codegen/typescript-react-apollo": "^1.8.3",
     "@nrwl/cli": "^8.9.0",
-    "@nrwl/cypress": "8.7.0",
-    "@nrwl/eslint-plugin-nx": "8.7.0",
-    "@nrwl/express": "^8.7.0",
-    "@nrwl/jest": "8.7.0",
-    "@nrwl/next": "8.7.0",
-    "@nrwl/node": "8.7.0",
+    "@nrwl/cypress": "8.12.2",
+    "@nrwl/eslint-plugin-nx": "8.12.2",
+    "@nrwl/express": "8.12.2",
+    "@nrwl/jest": "8.12.2",
+    "@nrwl/next": "8.12.2",
+    "@nrwl/node": "8.12.2",
     "@nrwl/nx": "^7.8.7",
-    "@nrwl/react": "8.7.0",
-    "@nrwl/web": "8.7.0",
-    "@nrwl/workspace": "8.7.0",
-    "@testing-library/react": "9.3.0",
+    "@nrwl/react": "8.12.2",
+    "@nrwl/web": "8.12.2",
+    "@nrwl/workspace": "8.12.2",
+    "@testing-library/react": "9.4.0",
     "@types/cookie": "^0.3.3",
     "@types/express": "4.17.0",
     "@types/jest": "24.0.9",
     "@types/node": "~8.9.4",
-    "@types/react": "16.9.6",
-    "@types/react-dom": "16.9.2",
+    "@types/react": "16.9.17",
+    "@types/react-dom": "16.9.4",
     "@typescript-eslint/eslint-plugin": "2.3.2",
     "@typescript-eslint/parser": "2.3.2",
     "concurrently": "^5.0.0",
     "cross-env": "^6.0.3",
-    "cypress": "3.4.1",
+    "cypress": "^3.8.2",
     "eslint": "6.1.0",
     "eslint-config-prettier": "6.0.0",
-    "eslint-plugin-import": "2.18.2",
+    "eslint-plugin-import": "2.19.1",
     "eslint-plugin-jsx-a11y": "6.2.3",
-    "eslint-plugin-react": "7.16.0",
-    "eslint-plugin-react-hooks": "2.1.2",
+    "eslint-plugin-react": "7.17.0",
+    "eslint-plugin-react-hooks": "2.3.0",
     "graphql-tools": "^4.0.6",
     "jest": "24.1.0",
     "prettier": "1.18.2",
@@ -112,7 +112,7 @@
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
     "typescript": "^3.7.2",
-    "@types/react-router-dom": "5.1.0",
+    "@types/react-router-dom": "5.1.3",
     "@babel/preset-react": "7.0.0"
   }
 }
