Replaced Apollo-server with express-gql. So nice

--- a/apps/graphql-api/tsconfig.json
+++ b/apps/graphql-api/tsconfig.json
@@ -3,5 +3,5 @@
   "compilerOptions": {
     "types": ["node", "jest", "express"]
   },
-  "include": ["src/**/*.ts", "src/startServer.ts"]
+  "include": ["src/**/*.ts"]
 }
