--- a/codegen.yml
+++ b/codegen.yml
@@ -1,6 +1,6 @@
 overwrite: true
-schema: http://localhost:8000
-# schema: http://localhost:8000/graphql
+# schema: http://localhost:8000
+schema: http://localhost:8000/graphql
 # documents: components/**/*.{ts,tsx}
 documents:
   - apps/frontend/components/**/*.gql
