--- a/package.json
+++ b/package.json
@@ -52,13 +52,13 @@
     "apollo-boost": "^0.4.4",
     "apollo-link-context": "^1.0.19",
     "apollo-link-http": "^1.5.16",
-    "apollo-server": "^2.9.9",
     "apollo-server-express": "^2.9.9",
     "cookie": "^0.4.0",
     "date-fns": "^2.8.1",
     "document-register-element": "1.13.1",
     "dotenv": "^6.2.0",
     "express": "4.17.1",
+    "express-graphql": "^0.9.0",
     "firebase": "^7.3.0",
     "firebase-admin": "^8.7.0",
     "firebase-functions": "^3.3.0",
@@ -72,6 +72,7 @@
     "react-dom": "16.12.0"
   },
   "devDependencies": {
+    "@babel/preset-react": "7.0.0",
     "@graphql-codegen/cli": "^1.8.3",
     "@graphql-codegen/typescript": "^1.8.3",
     "@graphql-codegen/typescript-operations": "^1.8.3",
@@ -90,10 +91,12 @@
     "@testing-library/react": "9.4.0",
     "@types/cookie": "^0.3.3",
     "@types/express": "4.17.0",
+    "@types/graphql": "^14.5.0",
     "@types/jest": "24.0.9",
-    "@types/node": "~8.9.4",
+    "@types/node": "^8.9.5",
     "@types/react": "16.9.17",
     "@types/react-dom": "16.9.4",
+    "@types/react-router-dom": "5.1.3",
     "@typescript-eslint/eslint-plugin": "2.3.2",
     "@typescript-eslint/parser": "2.3.2",
     "concurrently": "^5.0.0",
@@ -111,8 +114,6 @@
     "ts-jest": "24.0.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "^3.7.2",
-    "@types/react-router-dom": "5.1.3",
-    "@babel/preset-react": "7.0.0"
+    "typescript": "^3.7.2"
   }
 }
