--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "apollo-link-http": "^1.5.16",
     "apollo-server-express": "^2.9.9",
     "cookie": "^0.4.0",
+    "dataloader": "^2.0.0",
     "date-fns": "^2.8.1",
     "document-register-element": "1.13.1",
     "dotenv": "^6.2.0",
