--- a/package.json
+++ b/package.json
@@ -70,7 +70,8 @@
     "merge-graphql-schemas": "^1.7.3",
     "next": "9.1.5",
     "react": "16.12.0",
-    "react-dom": "16.12.0"
+    "react-dom": "16.12.0",
+    "react-firebase-hooks": "^2.1.1"
   },
   "devDependencies": {
     "@babel/preset-react": "7.0.0",
