--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "graphql-type-json": "^0.3.0",
     "isomorphic-unfetch": "^3.0.0",
     "merge-graphql-schemas": "^1.7.3",
-    "next": "9.1.5",
+    "next": "^9.3.2",
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "react-firebase-hooks": "^2.1.1"
