--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@google-cloud/secret-manager": "^1.1.2",
     "@material-ui/core": "^4.6.0",
     "@material-ui/icons": "^4.5.1",
+    "@types/react-color": "^3.0.1",
     "@zeit/next-css": "1.0.1",
     "@zeit/next-less": "1.0.1",
     "@zeit/next-sass": "1.0.1",
@@ -70,7 +71,9 @@
     "merge-graphql-schemas": "^1.7.3",
     "next": "^9.3.2",
     "react": "16.12.0",
+    "react-color": "^2.18.0",
     "react-dom": "16.12.0",
+    "react-draggable": "^4.3.1",
     "react-firebase-hooks": "^2.1.1"
   },
   "devDependencies": {
@@ -100,12 +103,12 @@
     "@types/react": "16.9.17",
     "@types/react-dom": "16.9.4",
     "@types/react-router-dom": "5.1.3",
-    "@typescript-eslint/eslint-plugin": "2.3.2",
-    "@typescript-eslint/parser": "2.3.2",
+    "@typescript-eslint/eslint-plugin": "^2.3.2",
+    "@typescript-eslint/parser": "^2.3.2",
     "concurrently": "^5.0.0",
     "cross-env": "^6.0.3",
     "cypress": "^3.8.2",
-    "eslint": "6.1.0",
+    "eslint": "^6.1.0",
     "eslint-config-prettier": "6.0.0",
     "eslint-plugin-import": "2.19.1",
     "eslint-plugin-jsx-a11y": "6.2.3",
