--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "apollo-link-context": "^1.0.19",
     "apollo-link-http": "^1.5.16",
     "apollo-server-express": "^2.9.9",
+    "codemirror": "^5.53.2",
     "cookie": "^0.4.0",
     "dataloader": "^2.0.0",
     "date-fns": "^2.8.1",
@@ -68,9 +69,11 @@
     "graphql-bigint": "^1.0.0",
     "graphql-type-json": "^0.3.0",
     "isomorphic-unfetch": "^3.0.0",
+    "lodash.clonedeep": "^4.5.0",
     "merge-graphql-schemas": "^1.7.3",
     "next": "^9.3.2",
     "react": "16.12.0",
+    "react-codemirror2": "^7.1.0",
     "react-color": "^2.18.0",
     "react-dom": "16.12.0",
     "react-draggable": "^4.3.1",
@@ -94,6 +97,7 @@
     "@nrwl/web": "8.12.2",
     "@nrwl/workspace": "8.12.2",
     "@testing-library/react": "9.4.0",
+    "@types/codemirror": "0.0.91",
     "@types/cookie": "^0.3.3",
     "@types/express": "4.17.0",
     "@types/graphql": "^14.5.0",
@@ -116,6 +120,7 @@
     "eslint-plugin-react-hooks": "2.3.0",
     "graphql-tools": "^4.0.6",
     "jest": "24.1.0",
+    "jshint": "^2.11.0",
     "prettier": "1.18.2",
     "ts-jest": "24.0.0",
     "ts-node": "~7.0.0",
