--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "firebase-functions": "^3.3.0",
     "graphql": "^14.5.8",
     "graphql-bigint": "^1.0.0",
+    "graphql-fields": "^2.0.3",
     "graphql-type-json": "^0.3.0",
     "isomorphic-unfetch": "^3.0.0",
     "lodash.clonedeep": "^4.5.0",
@@ -102,6 +103,7 @@
     "@types/cookie": "^0.3.3",
     "@types/express": "4.17.0",
     "@types/graphql": "^14.5.0",
+    "@types/graphql-fields": "^1.3.2",
     "@types/graphql-type-json": "^0.3.2",
     "@types/jest": "24.0.9",
     "@types/node": "^8.9.5",
