--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
     "@types/graphql-fields": "^1.3.2",
     "@types/graphql-type-json": "^0.3.2",
     "@types/jest": "24.0.9",
+    "@types/lodash.clonedeep": "^4.5.6",
     "@types/node": "^8.9.5",
     "@types/react": "16.9.17",
     "@types/react-dom": "16.9.4",
