--- a/package.json
+++ b/package.json
@@ -79,7 +79,8 @@
     "react-color": "^2.18.0",
     "react-dom": "16.12.0",
     "react-draggable": "^4.3.1",
-    "react-firebase-hooks": "^2.1.1"
+    "react-firebase-hooks": "^2.1.1",
+    "react-grid-layout": "^0.18.3"
   },
   "devDependencies": {
     "@babel/preset-react": "7.0.0",
@@ -110,6 +111,7 @@
     "@types/node": "^8.9.5",
     "@types/react": "16.9.17",
     "@types/react-dom": "16.9.4",
+    "@types/react-grid-layout": "^0.17.1",
     "@types/react-router-dom": "5.1.3",
     "@typescript-eslint/eslint-plugin": "^2.3.2",
     "@typescript-eslint/parser": "^2.3.2",
