--- a/package.json
+++ b/package.json
@@ -43,14 +43,15 @@
     "@google-cloud/debug-agent": "^4.1.0",
     "@google-cloud/error-reporting": "^1.1.2",
     "@google-cloud/secret-manager": "^1.1.2",
-    "@material-ui/core": "^4.9.12",
+    "@material-ui/core": "^4.9.13",
     "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.51",
+    "@material-ui/lab": "^4.0.0-alpha.52",
+    "@material-ui/styles": "^4.9.13",
     "@types/react-color": "^3.0.1",
-    "@zeit/next-css": "1.0.1",
-    "@zeit/next-less": "1.0.1",
-    "@zeit/next-sass": "1.0.1",
-    "@zeit/next-stylus": "1.0.1",
+    "@zeit/next-css": "^1.0.1",
+    "@zeit/next-less": "^1.0.1",
+    "@zeit/next-sass": "^1.0.1",
+    "@zeit/next-stylus": "^1.0.1",
     "apollo-boost": "^0.4.4",
     "apollo-link-context": "^1.0.19",
     "apollo-link-http": "^1.5.16",
@@ -73,7 +74,7 @@
     "isomorphic-unfetch": "^3.0.0",
     "lodash.clonedeep": "^4.5.0",
     "merge-graphql-schemas": "^1.7.3",
-    "next": "^9.3.2",
+    "next": "9.3.3",
     "react": "16.12.0",
     "react-codemirror2": "^7.1.0",
     "react-color": "^2.18.0",
@@ -89,16 +90,16 @@
     "@graphql-codegen/typescript-operations": "^1.8.3",
     "@graphql-codegen/typescript-react-apollo": "^1.8.3",
     "@nrwl/cli": "^8.9.0",
-    "@nrwl/cypress": "8.12.2",
-    "@nrwl/eslint-plugin-nx": "8.12.2",
-    "@nrwl/express": "8.12.2",
-    "@nrwl/jest": "8.12.2",
-    "@nrwl/next": "8.12.2",
-    "@nrwl/node": "8.12.2",
+    "@nrwl/cypress": "9.2.4",
+    "@nrwl/eslint-plugin-nx": "9.2.4",
+    "@nrwl/express": "9.2.4",
+    "@nrwl/jest": "9.2.4",
+    "@nrwl/next": "9.2.4",
+    "@nrwl/node": "9.2.4",
     "@nrwl/nx": "^7.8.7",
-    "@nrwl/react": "8.12.2",
-    "@nrwl/web": "8.12.2",
-    "@nrwl/workspace": "8.12.2",
+    "@nrwl/react": "9.2.4",
+    "@nrwl/web": "9.2.4",
+    "@nrwl/workspace": "9.2.4",
     "@testing-library/react": "9.4.0",
     "@types/codemirror": "0.0.91",
     "@types/cookie": "^0.3.3",
@@ -106,7 +107,7 @@
     "@types/graphql": "^14.5.0",
     "@types/graphql-fields": "^1.3.2",
     "@types/graphql-type-json": "^0.3.2",
-    "@types/jest": "24.0.9",
+    "@types/jest": "25.1.4",
     "@types/lodash.clonedeep": "^4.5.6",
     "@types/node": "^8.9.5",
     "@types/react": "16.9.17",
@@ -118,19 +119,19 @@
     "concurrently": "^5.0.0",
     "cross-env": "^6.0.3",
     "cypress": "^3.8.2",
-    "eslint": "^6.1.0",
+    "eslint": "6.8.0",
     "eslint-config-prettier": "6.0.0",
     "eslint-plugin-import": "2.19.1",
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-react": "7.17.0",
     "eslint-plugin-react-hooks": "2.3.0",
     "graphql-tools": "^4.0.6",
-    "jest": "24.1.0",
+    "jest": "25.2.4",
     "jshint": "^2.11.0",
-    "prettier": "1.18.2",
-    "ts-jest": "24.0.0",
+    "prettier": "1.19.1",
+    "ts-jest": "25.2.1",
     "ts-node": "~7.0.0",
-    "tslint": "~5.11.0",
-    "typescript": "^3.8.3"
+    "tslint": "6.0.0",
+    "typescript": "3.8.3"
   }
 }
