--- a/package.json
+++ b/package.json
@@ -61,7 +61,9 @@
     "dataloader": "^2.0.0",
     "date-fns": "^2.8.1",
     "document-register-element": "1.13.1",
+    "dompurify": "^2.0.12",
     "dotenv": "^6.2.0",
+    "draft-js": "^0.11.7",
     "express": "4.17.1",
     "express-graphql": "^0.9.0",
     "firebase": "^7.3.0",
@@ -75,13 +77,17 @@
     "lodash.clonedeep": "^4.5.0",
     "merge-graphql-schemas": "^1.7.3",
     "next": "9.3.3",
-    "react": "16.12.0",
+    "nx": "^10.1.0",
+    "react": "^16.13.1",
     "react-codemirror2": "^7.1.0",
     "react-color": "^2.18.0",
-    "react-dom": "16.12.0",
+    "react-dom": "^16.13.1",
+    "react-draft-wysiwyg": "^1.14.5",
     "react-draggable": "^4.3.1",
     "react-firebase-hooks": "^2.1.1",
-    "react-grid-layout": "^0.18.3"
+    "react-grid-layout": "^0.18.3",
+    "react-html-parser": "^2.0.2",
+    "recoil": "0.0.13"
   },
   "devDependencies": {
     "@babel/preset-react": "7.0.0",
@@ -112,7 +118,9 @@
     "@types/node": "^8.9.5",
     "@types/react": "16.9.17",
     "@types/react-dom": "16.9.4",
+    "@types/react-draft-wysiwyg": "^1.13.0",
     "@types/react-grid-layout": "^0.17.1",
+    "@types/react-html-parser": "^2.0.1",
     "@types/react-router-dom": "5.1.3",
     "@typescript-eslint/eslint-plugin": "^2.3.2",
     "@typescript-eslint/parser": "^2.3.2",
