--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,7 @@
   "parserOptions": {
     "ecmaVersion": 2018,
     "sourceType": "module",
-    "project": "./tsconfig.json"
+    "project": "./tsconfig.*?.json"
   },
   "plugins": ["@typescript-eslint", "@nrwl/nx"],
   "extends": [
@@ -20,16 +20,6 @@
     "@typescript-eslint/no-explicit-any": "off",
     "@typescript-eslint/no-parameter-properties": "off",
     "semi": [2, "always"],
-    // "max-len": [
-    //   "error",
-    //   { "code": 80 },
-    //   { "ignoreStrings": true },
-    //   { "ignoreTemplateLiterals": true },
-    //   { "ignoreUrls": true },
-    //   { "ignoreTrailingComments": true },
-    //   { "ignoreComments": true },
-    //   { "ignorePattern": "^\\s*var\\s.+=\\s*require\\s*\\(" }
-    // ],
     "@nrwl/nx/enforce-module-boundaries": [
       "error",
       {
@@ -42,7 +32,8 @@
         ],
         "enforceBuildableLibDependency": true
       }
-    ]
+    ],
+    "@typescript-eslint/explicit-module-boundary-types": "off"
   },
   "overrides": [
     {
