--- a/apps/frontend-e2e/tsconfig.e2e.json
+++ b/apps/frontend-e2e/tsconfig.e2e.json
@@ -4,5 +4,6 @@
     "sourceMap": false,
     "outDir": "../../dist/out-tsc"
   },
-  "include": ["src/**/*.ts"]
+  "include": ["src/**/*.ts"],
+  "files": []
 }
