--- a/apps/graphql-api/tsconfig.app.json
+++ b/apps/graphql-api/tsconfig.app.json
@@ -5,5 +5,6 @@
     "types": ["node"]
   },
   "exclude": ["**/*.spec.ts"],
-  "include": ["**/*.ts", "./src/types/*.d.ts"]
+  "include": ["**/*.ts", "./src/types/*.d.ts"],
+  "files": []
 }
