--- a/nx.json
+++ b/nx.json
@@ -3,13 +3,15 @@
   "implicitDependencies": {
     "workspace.json": "*",
     "package.json": "*",
-    "tsconfig.json": "*",
     "tslint.json": "*",
-    "nx.json": "*"
+    "nx.json": "*",
+    "tsconfig.base.json": "*",
+    ".eslintrc.json": "*"
   },
   "projects": {
     "frontend": {
-      "tags": []
+      "tags": [],
+      "implicitDependencies": ["types", "enums", "functions"]
     },
     "frontend-e2e": {
       "tags": [],
@@ -47,5 +49,8 @@
         "cacheableOperations": ["build", "lint", "test", "e2e"]
       }
     }
+  },
+  "affected": {
+    "defaultBase": "master"
   }
 }
