--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "graphql-api:generate": "graphql-codegen",
     "nx": "nx",
     "start": "nx serve",
-    "build": "nx build frontend && nx build functions && nx build graphql-api",
+    "build": "nx build frontend --buildLibsFromSource && nx build functions && nx build graphql-api",
     "test": "nx build frontend && nx build functions && nx build graphql-api",
     "lint": "nx workspace-lint && nx lint",
     "e2e": "nx e2e",
@@ -38,108 +38,116 @@
     "help": "nx help"
   },
   "dependencies": {
-    "@apollo/react-hooks": "^3.1.3",
-    "@apollo/react-ssr": "^3.1.3",
+    "@apollo/react-hooks": "^4.0.0",
+    "@apollo/react-ssr": "^4.0.0",
+    "@babel/core": "7.9.6",
+    "@babel/preset-env": "7.9.6",
+    "@babel/preset-react": "7.9.4",
+    "@babel/preset-typescript": "7.9.0",
+    "@babel/plugin-transform-flow-strip-types": "^7.10.4",
     "@google-cloud/debug-agent": "^4.1.0",
     "@google-cloud/error-reporting": "^1.1.2",
     "@google-cloud/secret-manager": "^1.1.2",
-    "@material-ui/core": "^4.9.13",
+    "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.52",
-    "@material-ui/styles": "^4.9.13",
-    "@types/react-color": "^3.0.1",
+    "@material-ui/lab": "^4.0.0-alpha.56",
+    "@material-ui/styles": "^4.10.0",
+    "@nrwl/cli": "10.3.1",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-less": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
     "@zeit/next-stylus": "^1.0.1",
-    "apollo-boost": "^0.4.4",
-    "apollo-link-context": "^1.0.19",
-    "apollo-link-http": "^1.5.16",
-    "apollo-server-express": "^2.9.9",
-    "codemirror": "^5.53.2",
-    "cookie": "^0.4.0",
+    "apollo-boost": "^0.4.9",
+    "apollo-link-context": "^1.0.20",
+    "apollo-link-http": "^1.5.17",
+    "apollo-server-express": "^2.18.2",
+    "codemirror": "^5.58.1",
+    "cookie": "^0.4.1",
     "dataloader": "^2.0.0",
-    "date-fns": "^2.8.1",
+    "date-fns": "^2.16.1",
     "document-register-element": "1.13.1",
-    "dompurify": "^2.0.12",
-    "dotenv": "^6.2.0",
+    "dompurify": "^2.1.1",
+    "dotenv": "^8.2.0",
     "draft-js": "^0.11.7",
     "express": "4.17.1",
-    "express-graphql": "^0.9.0",
-    "firebase": "^7.3.0",
-    "firebase-admin": "^8.7.0",
-    "firebase-functions": "^3.3.0",
-    "graphql": "^14.5.8",
+    "express-graphql": "^0.11.0",
+    "firebase": "^7.23.0",
+    "firebase-admin": "^9.2.0",
+    "firebase-functions": "^3.11.0",
+    "graphql": "^15.3.0",
     "graphql-bigint": "^1.0.0",
     "graphql-fields": "^2.0.3",
-    "graphql-type-json": "^0.3.0",
-    "isomorphic-unfetch": "^3.0.0",
+    "graphql-type-json": "^0.3.2",
+    "isomorphic-unfetch": "^3.1.0",
     "lodash.clonedeep": "^4.5.0",
-    "merge-graphql-schemas": "^1.7.3",
-    "next": "9.3.3",
-    "nx": "^10.1.0",
-    "react": "^16.13.1",
+    "merge-graphql-schemas": "^1.7.8",
+    "next": "9.5.2",
+    "nx": "^10.3.2",
+    "react": "16.13.1",
     "react-codemirror2": "^7.1.0",
     "react-color": "^2.18.0",
-    "react-dom": "^16.13.1",
+    "react-dom": "16.13.1",
     "react-draft-wysiwyg": "^1.14.5",
     "react-draggable": "^4.3.1",
     "react-firebase-hooks": "^2.1.1",
     "react-grid-layout": "^0.18.3",
     "react-html-parser": "^2.0.2",
-    "recoil": "0.0.13"
+    "recoil": "0.0.13",
+    "tslib": "^2.0.3"
   },
   "devDependencies": {
-    "@babel/preset-react": "7.0.0",
-    "@graphql-codegen/cli": "^1.8.3",
-    "@graphql-codegen/typescript": "^1.8.3",
-    "@graphql-codegen/typescript-operations": "^1.8.3",
-    "@graphql-codegen/typescript-react-apollo": "^1.8.3",
-    "@nrwl/cli": "^8.9.0",
-    "@nrwl/cypress": "9.2.4",
-    "@nrwl/eslint-plugin-nx": "9.2.4",
-    "@nrwl/express": "9.2.4",
-    "@nrwl/jest": "9.2.4",
-    "@nrwl/next": "9.2.4",
-    "@nrwl/node": "9.2.4",
+    "@babel/plugin-proposal-class-properties": "^7.10.4",
+    "@babel/preset-react": "7.10.4",
+    "@graphql-codegen/cli": "^1.17.10",
+    "@graphql-codegen/typescript": "^1.17.10",
+    "@graphql-codegen/typescript-operations": "^1.17.8",
+    "@graphql-codegen/typescript-react-apollo": "^2.0.7",
+    "@nrwl/cli": "^10.3.0",
+    "@nrwl/cypress": "10.3.2",
+    "@nrwl/eslint-plugin-nx": "10.3.2",
+    "@nrwl/express": "10.3.2",
+    "@nrwl/jest": "10.3.2",
+    "@nrwl/next": "10.3.2",
+    "@nrwl/node": "10.3.2",
     "@nrwl/nx": "^7.8.7",
-    "@nrwl/react": "9.2.4",
-    "@nrwl/web": "9.2.4",
-    "@nrwl/workspace": "9.2.4",
-    "@testing-library/react": "9.4.0",
-    "@types/codemirror": "0.0.91",
-    "@types/cookie": "^0.3.3",
-    "@types/express": "4.17.0",
+    "@nrwl/react": "10.3.2",
+    "@nrwl/web": "10.3.2",
+    "@nrwl/workspace": "10.3.2",
+    "@testing-library/react": "10.4.1",
+    "@types/codemirror": "0.0.98",
+    "@types/cookie": "^0.4.0",
+    "@types/express": "4.17.8",
     "@types/graphql": "^14.5.0",
-    "@types/graphql-fields": "^1.3.2",
+    "@types/graphql-fields": "^1.3.3",
     "@types/graphql-type-json": "^0.3.2",
-    "@types/jest": "25.1.4",
+    "@types/jest": "26.0.8",
     "@types/lodash.clonedeep": "^4.5.6",
-    "@types/node": "^8.9.5",
-    "@types/react": "16.9.17",
-    "@types/react-dom": "16.9.4",
+    "@types/node": "^14.11.8",
+    "@types/react": "16.9.38",
+    "@types/react-color": "^3.0.4",
+    "@types/react-dom": "16.9.8",
     "@types/react-draft-wysiwyg": "^1.13.0",
-    "@types/react-grid-layout": "^0.17.1",
+    "@types/react-grid-layout": "^1.1.1",
     "@types/react-html-parser": "^2.0.1",
-    "@types/react-router-dom": "5.1.3",
-    "@typescript-eslint/eslint-plugin": "^2.3.2",
-    "@typescript-eslint/parser": "^2.3.2",
-    "concurrently": "^5.0.0",
+    "@typescript-eslint/eslint-plugin": "4.3.0",
+    "@typescript-eslint/parser": "4.3.0",
+    "concurrently": "^5.3.0",
     "cross-env": "^6.0.3",
-    "cypress": "^3.8.2",
-    "eslint": "6.8.0",
+    "cypress": "^4.1.0",
+    "eslint": "7.10.0",
     "eslint-config-prettier": "6.0.0",
-    "eslint-plugin-import": "2.19.1",
-    "eslint-plugin-jsx-a11y": "6.2.3",
-    "eslint-plugin-react": "7.17.0",
-    "eslint-plugin-react-hooks": "2.3.0",
-    "graphql-tools": "^4.0.6",
-    "jest": "25.2.4",
-    "jshint": "^2.11.0",
-    "prettier": "1.19.1",
-    "ts-jest": "25.2.1",
+    "eslint-plugin-cypress": "^2.10.3",
+    "eslint-plugin-import": "2.21.2",
+    "eslint-plugin-jsx-a11y": "6.3.1",
+    "eslint-plugin-react": "7.20.0",
+    "eslint-plugin-react-hooks": "4.0.4",
+    "graphql-tools": "^6.2.4",
+    "jest": "26.2.2",
+    "jshint": "^2.12.0",
+    "prettier": "2.0.4",
+    "ts-jest": "26.4.0",
     "ts-node": "~7.0.0",
-    "tslint": "6.0.0",
-    "typescript": "3.8.3"
+    "tslint": "~6.0.0",
+    "typescript": "4.0.3"
   }
 }
