Updating nx and fixing save data issue+ts errors

--- a/babel.config.json
+++ b/babel.config.json
@@ -1,5 +1,5 @@
 {
-  "presets": ["@nrwl/web/babel"],
+  "presets": [],
   "plugins": ["@babel/plugin-transform-flow-strip-types"],
   "babelrcRoots": ["*"]
 }
