--- a/package.json
+++ b/package.json
@@ -33,18 +33,18 @@
     "format": "nx format:write",
     "format:write": "nx format:write",
     "format:check": "nx format:check",
-    "workspace-schematic": "nx workspace-schematic",
     "dep-graph": "nx dep-graph",
-    "help": "nx help"
+    "help": "nx help",
+    "workspace-generator": "nx workspace-generator"
   },
   "dependencies": {
     "@apollo/react-hooks": "^4.0.0",
     "@apollo/react-ssr": "^4.0.0",
     "@babel/core": "7.9.6",
+    "@babel/plugin-transform-flow-strip-types": "^7.10.4",
     "@babel/preset-env": "7.9.6",
     "@babel/preset-react": "7.9.4",
     "@babel/preset-typescript": "7.9.0",
-    "@babel/plugin-transform-flow-strip-types": "^7.10.4",
     "@google-cloud/debug-agent": "^4.1.0",
     "@google-cloud/error-reporting": "^1.1.2",
     "@google-cloud/secret-manager": "^1.1.2",
@@ -52,7 +52,6 @@
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@material-ui/styles": "^4.10.0",
-    "@nrwl/cli": "10.3.1",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-less": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
@@ -67,7 +66,7 @@
     "date-fns": "^2.16.1",
     "document-register-element": "1.13.1",
     "dompurify": "^2.1.1",
-    "dotenv": "^8.2.0",
+    "dotenv": "8.2.0",
     "draft-js": "^0.11.7",
     "express": "4.17.1",
     "express-graphql": "^0.11.0",
@@ -81,12 +80,12 @@
     "isomorphic-unfetch": "^3.1.0",
     "lodash.clonedeep": "^4.5.0",
     "merge-graphql-schemas": "^1.7.8",
-    "next": "9.5.2",
+    "next": "10.1.2",
     "nx": "^10.3.2",
-    "react": "16.13.1",
+    "react": "17.0.2",
     "react-codemirror2": "^7.1.0",
     "react-color": "^2.18.0",
-    "react-dom": "16.13.1",
+    "react-dom": "17.0.2",
     "react-draft-wysiwyg": "^1.14.5",
     "react-draggable": "^4.3.1",
     "react-firebase-hooks": "^2.1.1",
@@ -102,19 +101,20 @@
     "@graphql-codegen/typescript": "^1.17.10",
     "@graphql-codegen/typescript-operations": "^1.17.8",
     "@graphql-codegen/typescript-react-apollo": "^2.0.7",
-    "@nrwl/cli": "^10.3.0",
-    "@nrwl/cypress": "10.3.2",
-    "@nrwl/eslint-plugin-nx": "10.3.2",
-    "@nrwl/express": "10.3.2",
-    "@nrwl/jest": "10.3.2",
-    "@nrwl/next": "10.3.2",
-    "@nrwl/node": "10.3.2",
-    "@nrwl/nx-cloud": "latest",
+    "@nrwl/cli": "12.0.0",
+    "@nrwl/cypress": "12.0.0",
+    "@nrwl/eslint-plugin-nx": "12.0.0",
+    "@nrwl/express": "12.0.0",
+    "@nrwl/jest": "12.0.0",
+    "@nrwl/next": "12.0.0",
+    "@nrwl/node": "12.0.0",
     "@nrwl/nx": "^7.8.7",
-    "@nrwl/react": "10.3.2",
-    "@nrwl/web": "10.3.2",
-    "@nrwl/workspace": "10.3.2",
-    "@testing-library/react": "10.4.1",
+    "@nrwl/nx-cloud": "11.2.0",
+    "@nrwl/react": "12.0.0",
+    "@nrwl/tao": "12.0.0",
+    "@nrwl/web": "12.0.0",
+    "@nrwl/workspace": "12.0.0",
+    "@testing-library/react": "11.2.5",
     "@types/codemirror": "0.0.98",
     "@types/cookie": "^0.4.0",
     "@types/express": "4.17.8",
@@ -123,32 +123,32 @@
     "@types/graphql-type-json": "^0.3.2",
     "@types/jest": "26.0.8",
     "@types/lodash.clonedeep": "^4.5.6",
-    "@types/node": "^14.11.8",
-    "@types/react": "16.9.38",
+    "@types/node": "14.14.33",
+    "@types/react": "17.0.3",
     "@types/react-color": "^3.0.4",
-    "@types/react-dom": "16.9.8",
+    "@types/react-dom": "17.0.3",
     "@types/react-draft-wysiwyg": "^1.13.0",
     "@types/react-grid-layout": "^1.1.1",
     "@types/react-html-parser": "^2.0.1",
-    "@typescript-eslint/eslint-plugin": "4.3.0",
-    "@typescript-eslint/parser": "4.3.0",
+    "@typescript-eslint/eslint-plugin": "4.19.0",
+    "@typescript-eslint/parser": "4.19.0",
     "concurrently": "^5.3.0",
     "cross-env": "^6.0.3",
     "cypress": "^4.1.0",
-    "eslint": "7.10.0",
-    "eslint-config-prettier": "6.0.0",
+    "eslint": "7.22.0",
+    "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
-    "eslint-plugin-import": "2.21.2",
+    "eslint-plugin-import": "2.22.1",
     "eslint-plugin-jsx-a11y": "6.3.1",
-    "eslint-plugin-react": "7.20.0",
-    "eslint-plugin-react-hooks": "4.0.4",
+    "eslint-plugin-react": "7.23.1",
+    "eslint-plugin-react-hooks": "4.2.0",
     "graphql-tools": "^6.2.4",
     "jest": "26.2.2",
     "jshint": "^2.12.0",
-    "prettier": "2.0.4",
+    "prettier": "2.2.1",
     "ts-jest": "26.4.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~6.0.0",
-    "typescript": "4.0.3"
+    "ts-node": "9.1.1",
+    "tslint": "6.1.3",
+    "typescript": "4.1.4"
   }
 }
